resolve some layout issues

--- a/src/BlazorUI/Demo/Client/Shared/Shared/NavMenu.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Shared/NavMenu.razor.scss
@@ -18,6 +18,7 @@
     width: rem($NavMenuWidth);
     max-width: rem($NavMenuWidth);
     height: calc(100vh - rem($HeaderHeight));
+    background-color: $bit-color-background-primary;
     border-right: rem(1px) solid $bit-color-border-secondary;
 
     @include lt-lg {
